--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,6 @@
     <packaging>jar</packaging>
 
     <name>literalura</name>
-    <description>Projeto do desafio Literalura - Alura</description>
 
     <properties>
         <java.version>21</java.version>
@@ -26,7 +25,6 @@
     </parent>
 
     <dependencies>
-
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -72,13 +70,11 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <version>42.7.1</version>
             <scope>runtime</scope>
         </dependency>
 
